<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/search_properties"
            android:id="@+id/menu_search_properties_id"
            android:icon="@drawable/ic_search"
            android:visible="false"
            />

        <item
            android:title="@string/login"
            android:id="@+id/menu_login_id"
            android:icon="@drawable/ic_login_menu"
            />
        <item
            android:title="@string/register"
            android:id="@+id/menu_register_id"
            android:icon="@drawable/ic_register"
            />

        <item
            android:title="@string/main_contact"
            android:id="@+id/menu_contact_id"
            android:icon="@drawable/ic_contact"
            />
        <item
            android:title="@string/main_about"
            android:id="@+id/menu_about_id"
            android:icon="@drawable/ic_about"
            />

        <item
            android:title="@string/logout"
            android:id="@+id/menu_logout_id"
            android:icon="@drawable/ic_settings"
            />

        <item
            android:title="@string/exit"
            android:id="@+id/menu_exit_id"
            android:icon="@drawable/ic_exit"
            />

    </group>

</menu>