<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <android.support.v7.widget.Toolbar
        android:layoutDirection="ltr"
        android:id="@+id/post_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/post_details_tooltitle"
        />

    <ScrollView
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/pro_details_price"
            android:textColor="@color/hint_text_color"
            />
        <TextView
            android:id="@+id/post_details_price"
            android:gravity="center"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/_000"
            android:textColor="@color/colorPrimary"
            />
    </TableRow>
    </TableLayout>


</LinearLayout>
            <RelativeLayout
                android:layoutDirection="ltr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v4.view.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/postdetails_viewpager"/>
                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="150dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_image_found_for_this_post"
                    android:id="@+id/post_has_no_img"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone"
                     />
            </RelativeLayout>


            ///
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/post_d_state_or_region"
                android:textColor="@color/hint_text_color"
                />

            <TextView
                android:id="@+id/post_details_location"
                android:text="@string/qatar"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            /////

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/pro_details_general_information"
                android:textColor="@color/hint_text_color"
                />

            <TextView
                android:id="@+id/post_details_g_info"
                android:text="@string/pro_det_general_info_text"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
              />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/contact_information"
                android:textColor="@color/hint_text_color"
                />

            <TextView
                android:id="@+id/post_details_name"
                android:text="name"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_user_post_contact"
                android:drawableStart="@drawable/ic_user_post_contact"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/post_details_email"
                android:text="email"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/post_details_phone"
                android:text="phone"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_phone"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
